# cmake-code-generation

./: CMakeLists.txt  README.md  Sample.h  generate.py  main.cpp
sample/: CMakeLists.txt  generate.py
